<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreateProjectActivity"
    android:orientation="vertical"
    android:background="#F3F4F7"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:background="@color/colorPrimary"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create new project"

                    android:textColor="#ffffff"
                    android:textSize="25dp"
                    android:textAlignment="center"

                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="40dp"
                android:background="@color/backgrounds"
                android:elevation="4dp"
                >
                <LinearLayout
                    android:id="@+id/new_project_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:gravity="center"

                    >


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        app:boxBackgroundColor="@color/backgrounds"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"

                        android:hint="@string/project_name"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/project_name"
                            android:layout_width="match_parent"
                            android:textColor="@color/colorPrimary"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:singleLine="true"

                            />
                    </com.google.android.material.textfield.TextInputLayout>



                </LinearLayout>



            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:elevation="1dp"
                android:background="#c0c0c0" />

            <ProgressBar
                android:id="@+id/project_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:visibility="gone"
                />

            <ScrollView
                android:translationY="-40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dp"
                            android:text="Collaborators:"
                            android:textSize="20sp"/>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"

                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            >

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"

                                android:layout_weight="1"
                                android:orientation="vertical">
                                <!--<ImageView-->
                                <!--android:layout_width="40dp"-->
                                <!--android:layout_height="40dp"-->
                                <!--android:layout_marginTop="15dp"-->
                                <!--android:layout_marginRight="15dp"-->
                                <!--android:src="@drawable/ic_event_note_black_24dp" />-->

                                <Spinner

                                    android:id="@+id/role_spinner"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

                                </Spinner>

                                <com.google.android.material.textfield.TextInputLayout
                                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:hint="Collaborator email"
                                    app:boxBackgroundColor="#F3F4F7">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/collab_address"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:inputType="text" />
                                </com.google.android.material.textfield.TextInputLayout>

                            </LinearLayout>


                            <ImageButton
                                android:id="@+id/add_collab_button"
                                android:layout_width="wrap_content"
                                android:layout_height="34dp"
                                android:layout_gravity="center"
                                android:layout_margin="25dp"
                                android:background="@drawable/ic_person_add_black_24dp" />

                        </LinearLayout>




                    </LinearLayout>




                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/collaborators_wrap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_collaborator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|right"
        android:layout_margin="10dp"
        android:src="@drawable/ic_send_black_24dp" />


    <!--    <Button-->
<!--        android:id="@+id/create_project_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_margin="10dp"-->
<!--        android:background="#B586D9"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="15dp"-->
<!--        android:text="CREATE PROJECT"-->
<!--        android:textSize="20dp" />-->







</LinearLayout>
