...
        >

    </androidx.recyclerview.widget.RecyclerView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_projects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_add_white_24dp"
        android:layout_alignParentRight="true"
...
